fix: scrollbar width (#329)

--- a/app/global.css
+++ b/app/global.css
@@ -159,6 +159,9 @@
   .scroll-wrap:hover::-webkit-scrollbar {
     opacity: 1;
   }
+  .scrollbar-thin::-webkit-scrollbar {
+    width: 5px !important;
+  }
 }
 
 @theme {
